fix: change font-size units to em to prevent overflow in mobile view

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
     height: 100px;
     border: 5px inset darkgrey;
     background-color: lightgrey;
-    font-size: 65px;
+    font-size: 3.7em;
     font-weight: 600;
     background: linear-gradient(to top left, lightgreen, whitesmoke);
     
@@ -79,7 +79,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    font-size: 35px;
+    font-size: 2.2em;
     font-weight: 500;
     border-radius: 10px;
     box-shadow: 0 0 3px lightgrey;
